--- a/TaskTransfer.org
+++ b/TaskTransfer.org
@@ -4,9 +4,9 @@
 
 * Context
   
+  /Agent as expert/ value : This is the value function of the agent evaluated at the starting state, given that the agent follows an optimal policy with respect to the /true reward function/. No behavior can induce a strictly greater true value than this one.
 
 * Mapping behaviors and rewards
-
 ** Reward space
 
    A reward can be scaled without changing its corresponding optimal policies. 
@@ -28,7 +28,6 @@
    - every edge that contain the $\lambda$ point can be scanned by changing only one coordinate
    - every other edge can be scanned by changing only two coordinates
    
-        
 ** Reward mapping
 
    In \cite{ng2000algorithms}, we are given a superb necessary and sufficient condition for a reward to be /compatible/ with a given policy, that is to say, for this given policy to be optimal with respect to the reward.
@@ -208,6 +207,36 @@ The number of columns not to take into account is the number of variables minus 
     \bibliography{../Biblio/Biblio.bib}
 * Code
 ** Main code
+*** Helper code
+    We need the matrices to be output so that two equal matrices are output the same way.
+
+  #+begin_src python :tangle a2str.py
+#Do not indent
+def l2str(l):
+	"""Return the unique string representing line l"""
+	answer = ""
+	for x in l:
+		if (abs(x)<1e-10): #FIXME : this is not right.
+			answer += " 0.00e+00\t"
+		elif (x>0):
+			answer += " %1.2e\t"%x
+		else:
+			answer += "%+1.2e\t"%x
+	answer +="\n"
+	return answer
+		
+        
+def a2str(a):
+	"""Return the unique string representing array a"""
+	answer = ""
+	for l in a:
+		answer += l2str( l )
+	return answer
+
+
+  #+end_src
+
+    We output values near 0 as 0. Instead we probably should understand why there are so much near-0 values in the normal output. I think it has to do with the linear system solver.
 *** Finding the BFS
    This code finds the coordinates of the vertices of the polytope, also known as the /basic feasible solutions/.\\
 
@@ -265,7 +294,7 @@ for lslice in itertools.combinations(range(0,3*g_iN+g_iM),g_iN+g_iM):
                     #print g_mC
                     #print R
                     #print dot( g_mC, R )
-            BFS.add(tuple((R.transpose())[0]))
+            BFS.add(l2str((R.transpose())[0]))
         #else:
             #print "Negative"
             #print partialStandardSol
@@ -284,15 +313,7 @@ from numpy import *
 import scipy
 import itertools
 from sets import *
-
-def a2str(a):
-	"""Return the string representing array a"""
-	answer = ""
-	for l in a:
-		for x in l:
-			answer += "%+.1f "%x
-		answer +="\n"
-        return answer
+from a2str import *
 
 #import pdb
 
@@ -300,7 +321,7 @@ g_mC = genfromtxt(sys.argv[1])
 g_iN = g_mC.shape[1]
 g_iM = g_mC.shape[0]
 
-print "C matrix : %d equations in %d variables"% (g_iM,g_iN)
+#print "C matrix : %d equations in %d variables"% (g_iM,g_iN)
 
 <<TT_linesCreation_py>>
 
@@ -308,11 +329,10 @@ print "C matrix : %d equations in %d variables"% (g_iM,g_iN)
 <<TT_linearSystem_py>>
 
 #print "All solutions are : "
+toPrint = ""
 for R in BFS:
-    for x in R:
-        sys.stdout.write("%f\t"%x)
-    sys.stdout.write("\n")
-
+    toPrint+=R
+print toPrint
 #+end_src
 
 *** Computing the $C$ constraints matrix
@@ -326,7 +346,7 @@ for Pa in g_lActionMatrices:
     A = dot((g_mPpi - Pa),linalg.inv( identity(g_iN)-(g_fGamma*g_mPpi) ))
     for line in A:
         if( any( line != zeros((1,g_iN)) ) ):
-               g_sC.add( tuple( line ))
+               g_sC.add( l2str( line ))
 
 #+end_src
     
@@ -337,7 +357,8 @@ import sys
 from numpy import *
 import scipy
 from sets import *
-
+from a2str import *
+  
 #import pdb
 g_mPpi = genfromtxt( sys.argv[1] )
 g_lActionMatrices = []
@@ -348,10 +369,10 @@ g_fGamma = 0.9
 
 <<TT_PpiMinusPaEtc_py>>
 
+toPrint = ""
 for line in g_sC:
-    for x in line:
-        sys.stdout.write("%f\t"%x)
-    sys.stdout.write("\n")
+    toPrint+=line
+print toPrint
 #+end_src
     
 ** Tests
@@ -452,9 +473,6 @@ TT_cleanTest0:
 	rm test/TT_outD3.mat
 	rm test/TT_outD4.mat
 #+end_src
-
-
-** Experiments
 *** 2x2 Gridworld
     In this simple setting we imagine a 2x2 gridworld and two experts. Both experts optimize the same reward, located in the north east corner. Both experts can choose between the same actions at each step : the four compass directions. The first expert's policy is NORTH, EAST, the second one is EAST, NORTH. We want to see in this experiment if the true reward is among the set of reward output by our algorithm.
 
@@ -463,14 +481,14 @@ TT_cleanTest0:
 
     We begin by defining the two matrices $P_{\pi_1}$ and $P_{\pi_2}$ relative to both expert's policies :
     - $P_{\pi_1}$ is :
-      #+begin_src text :tangle TT_PPi1.mat
+      #+begin_src text :tangle test/TT_PPi1.mat
 0	1	0	0
 0	1	0	0
 1	0	0	0
 0	1	0	0
       #+end_src
     - $P_{\pi_1}$ is :    
-      #+begin_src text :tangle TT_PPi2.mat
+      #+begin_src text :tangle test/TT_PPi2.mat
 0	1	0	0
 0	1	0	0
 0	0	0	1
@@ -480,32 +498,100 @@ TT_cleanTest0:
     
     We then define the four $P_a$ matrices relative to each action :
     - $P_{NORTH}$ is :
-      #+begin_src text :tangle TT_PNorth.mat
+      #+begin_src text :tangle test/TT_PNorth.mat
 1	0	0	0
 0	1	0	0
 1	0	0	0
 0	1	0	0
       #+end_src      
     - $P_{EAST}$ is :
-      #+begin_src text :tangle TT_PEast.mat
+      #+begin_src text :tangle test/TT_PEast.mat
 0	1	0	0
 0	1	0	0
 0	0	0	1
 0	0	0	1
       #+end_src
      - $P_{SOUTH}$ is :
-      #+begin_src text :tangle TT_PSouth.mat
+      #+begin_src text :tangle test/TT_PSouth.mat
 0	0	1	0
 0	0	0	1
 0	0	1	0
 0	0	0	1
       #+end_src
      - $P_{WEST}$ is :
-      #+begin_src text :tangle TT_PWest.mat
+      #+begin_src text :tangle test/TT_PWest.mat
 1	0	0	0
 1	0	0	0
 0	0	1	0
 0	0	1	0
       #+end_src
-      
+       
 
+    The constraint matrices relative each expert are computed :
+    #+srcname: TT_test1_make
+    #+begin_src makefile
+TT_test1:
+	python Constraint.py test/TT_PPi1.mat test/TT_PEast.mat test/TT_PWest.mat test/TT_PSouth.mat test/TT_PNorth.mat > test/TT_C1.mat
+	python Constraint.py test/TT_PPi2.mat test/TT_PEast.mat test/TT_PWest.mat test/TT_PSouth.mat test/TT_PNorth.mat > test/TT_C2.mat
+    #+end_src
+
+    The conjoint constraint matrix is extracted (duplicate lines are removed) :
+    #+srcname: TT_test1_make
+    #+begin_src makefile
+	cat test/TT_C1.mat test/TT_C2.mat | sort | uniq > test/TT_CBoth.mat
+    #+end_src
+
+    The TaskTransfer program is run and its output is compared against what is expected :
+    #+srcname: TT_test1_make
+    #+begin_src makefile
+	python TaskTransfer.py test/TT_CBoth.mat >> test/TT_outT1.mat
+	../Utils/matrix_diff.py test/TT_expectedOutT1.mat test/TT_outT1.mat
+    #+end_src
+
+    The expected output is drawn from a run of an early version of the program, it looked consistant and logical.
+
+    #+srcname: TT_cleanTest1_make
+    #+begin_src makefile
+TT_cleanTest1:
+	rm test/TT_C1.mat
+	rm test/TT_C2.mat
+	rm test/TT_CBoth.mat
+	rm test/TT_PPi1.mat
+	rm test/TT_PPi2.mat
+	rm test/TT_PNorth.mat
+	rm test/TT_PSouth.mat
+	rm test/TT_PWest.mat
+	rm test/TT_PEast.mat
+	rm test/TT_outT1.mat
+    #+end_src
+** Experiments
+*** Open questions
+    What easy-to-compute criteria corresponds to a reward that induce high-value behaviors ?
+    
+    
+    Assuming an infinite supply of experts, will the true reward function be retrieved ?
+    
+    
+    Is the /Agent as expert/ value always attainable by maximizing one of the output reward ?
+    
+    
+    Is there such a thing as a lousy expert that hides information to the algorithm ?
+*** Random rewards and random experts
+**** Goal
+    The goal of this experiment is to empirically test the hypothesis according to which there always is a reward output by the algorithm so that if the agent maximizes this reward its value is equal to the value when it maximizes the true reward function. 
+    
+    This hypothesis can be reformulated by saying that /the Agent as Expert value is always attainable by maximizing one of the output rewards/. 
+**** Protocol
+     - Do :
+       - Define a random reward $\mathbf{R}$ of size $n$
+       - Create $m_E$ random matrices $P_{a^E_i}$ corresponding to $m_E$ different actions the expert can choose among
+       - Compute the expert's policy by solving the MDP : $\pi \leftarrow DP( R, \{P_{a^E_i}\}_i)$
+       - Run the TaskTransfer Algorithm : $\{R_j\}_j = TaskTransfer( P_\pi, \{P_{a^E_i}\}_i)$
+       - Create $m_A$ random matrices $P_{a_k^A}$ corresponding to $m_A$ different actions the agent can choose among
+       - Compute the Agent as Expert policy by solving the MDP for the true reward function : $\pi \leftarrow DP( R, \{P_{a^A_i}\}_i)$
+       - Store the Agent as Expert value $V^{AaE}(s_0)$
+       - For every reward vector $R_j$ output by the TaskTransfer Algorithm,
+	 - Solve the MDP : $\pi_l \leftarrow DP(R^j, \{P_{a^A_k}\}_k )$
+	 - Store the value of the agent's behavior : $V\leftarrow V \cup \{V^{\pi_l}(s_0)\}$
+     - While $\max\limits_lV^{\pi_l}(s_0) = V^{AaE}(s_0)$ or the maximum number of iteration is attained
+ 
