Clarified which value we are talking about and added an instruction in the pseudo code to plot

--- a/TaskTransfer.org
+++ b/TaskTransfer.org
@@ -578,7 +578,7 @@ TT_cleanTest1:
    Is there such a thing as a lousy expert that hides information to the algorithm ?
 ** Random rewards and random experts
 *** Goal
-   The goal of this experiment is to empirically test the hypothesis according to which there always is a reward output by the algorithm so that if the agent maximizes this reward its value is equal to the value when it maximizes the true reward function. 
+   The goal of this experiment is to empirically test the hypothesis according to which there always is a reward output by the algorithm so that if the agent maximizes this reward its true value is equal to the true value when it maximizes the true reward function. 
    
    This hypothesis can be reformulated by saying that /the Agent as Expert value is always attainable by maximizing one of the output rewards/. 
 *** Protocol
@@ -592,7 +592,8 @@ TT_cleanTest1:
       - Store the Agent as Expert value $V^{AaE}(s_0)$
       - For every reward vector $R_j$ output by the TaskTransfer Algorithm,
 	- Solve the MDP : $\pi_l \leftarrow DP(R^j, \{P_{a^A_k}\}_k )$
-	- Store the value of the agent's behavior : $V\leftarrow V \cup \{V^{\pi_l}(s_0)\}$
+	- Store the true value of the agent's behavior : $V\leftarrow V \cup \{V^{\pi_l}(s_0)\}$
+      - Plot the agent's true values along with the expert's and the Agent as Expert value
     - While $\max\limits_lV^{\pi_l}(s_0) = V^{AaE}(s_0)$ or the maximum number of iteration is attained
 
       
